# TAMU_SEDS_Lunabotics

./: README.md  frames_2026-05-10_01.28.39.gv  frames_2026-05-10_23.21.11.gv  frames_2026-05-10_23.29.35.gv  frames_2026-05-11_00.50.27.gv  frames_2026-05-11_01.42.35.gv
Encoder/: encoder.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bringup/share/bringup/: local_setup.sh  package.sh  package.xml
install/bringup/share/bringup/launch/: all.launch.py  bridge.launch.py  control.launch.py  nav.launch.py  sim_camera.launch.py  sim_lidar.launch.py  sim_simple.launch.py  sim_ucf.launch.py  static.launch.py
install/bringup/share/bringup/rviz/: camera_view.rviz  lidar_view.rviz
log/: latest_build
roboclaw/: encoders.py  motor.py  uart.py
ros2_ws/: .gitignore
ros2_ws/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
ros2_ws/oldbuild/: compile_commands.json
ros2_ws/oldbuild/cpp_pubsub/: CMakeCache.txt  CTestConfiguration.ini  colcon_command_prefix_build.sh.env
ros2_ws/oldbuild/cpp_srvcli/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  client  cmake_install.cmake  colcon_command_prefix_build.sh.env  install_manifest.txt  server
ros2_ws/oldbuild/drive/: colcon_command_prefix_setup_py.sh.env
ros2_ws/oldbuild/imu_reader/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  colcon_command_prefix_build.sh.env  install_manifest.txt
ros2_ws/oldlog/: latest_build  latest_list
ros2_ws/src/sensors/: CMakeLists.txt
ros2_ws/src/sensors/src/: imu_publisher.cpp  imu_raw_pub.cpp
(+499 files in other folders)
